vlib/v/checker/tests/assign_anon_struct_to_typed_struct_err.vv
struct Message {
	a string
	b string
}

struct Fax {
	message Message
}

f := Fax{
	message: struct {
		a: 'A'
	}
}

dump(f)
